--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&family=Rowdies&family=Rubik+Bubbles&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<style> @import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap'); </style>">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
     </style>
 </head>
